--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,3 +1,4 @@
+// @import "compass/css3";
 
 body {
  background: #F7F7F7;
@@ -6,6 +7,15 @@ body {
  a {
   text-decoration: none;
   font-family: Impact, Charcoal, sans-serif
+}
+
+.flexbox-container{
+
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: column;
+
 }
 
 .clip-each-big {
@@ -50,7 +60,7 @@ body {
 .clip-wrap-polygon {
   width: 780px;
   height: 780px;
-  margin-left: 27%;
+  margin-left: 332px;
   margin-top: 206px;
 }
 
@@ -65,6 +75,7 @@ body {
 .clip-each, .clip-each:after, .clip-each-big, .clip-each-big:after, .clip-each-home, .clip-each-home:after {
   -webkit-clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
   clip-path: polygon(30% 0, 70% 0, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0 70%, 0 30%);
+  clip-path: url("#clip-big");
 }
 
 .clip-each-home:hover {
@@ -142,10 +153,12 @@ body {
 }
 
 .outer-octagon {
-  margin-top: -15%;
+  margin-top: -215px;
+  // margin-top: -15%;
   width: 1200px;
   height: 1200px;
-  margin-left: -4.25%;
+  margin-left: -62px;
+  // margin-left: -4.25%;
 
   .clip-wrap-polygon {
     .inner-polygon {
@@ -613,6 +626,8 @@ body {
     height: 200px;
     margin-top: -150px;
     margin-left: 268px;
+
+
   }
 
   .side2 {
@@ -659,16 +674,16 @@ body {
 
 
 .outer-octagon-right {
-  margin-top: -15%;
+  margin-top: -214px;
   width: 1200px;
   height: 1200px;
-  margin-left: 80%;
+  margin-left: 1155px;
 
   .clip-wrap-polygon {
     width: 780px;
     height: 780px;
-    margin-top: 17.5%;
-    margin-left: 7%;
+    margin-top: 206px;
+    margin-left: 85px;
     opacity: .8;
 
     .side {
